Cleanup and fix on mobile

--- a/client/landing/stepper/declarative-flow/internals/components/google-domains-transfer-instructions/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/components/google-domains-transfer-instructions/style.scss
@@ -4,6 +4,7 @@
 	font-size: rem(14px);
 	width: 600px;
 	max-width: 95%;
+	max-height: 95%;
 	margin: auto auto;
 
 	summary {
